[project]
name = "ai-travel-agent"
version = "1.0.0"
description = "Professional AI-powered travel planning system with flight search, hotel booking, and intelligent itinerary creation"
requires-python = ">=3.11"
dependencies = [
    "amadeus>=12.0.0",
    "crewai>=0.177.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
]
